--- a/projets.html
+++ b/projets.html
@@ -7,7 +7,17 @@
     <link rel="stylesheet" href="style.css"> <!-- Lien vers votre CSS -->
 </head>
 <body>
-
+    <header>
+        <nav>
+            <ul>
+                <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="competences.html">Compétences</a></li>
+                <li><a href="projets.html">Projets</a></li>
+                <li><a href="a propos.html">À propos</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <!-- Section Projets -->
     <section id="projets">
         <h1>Projets en vedette</h1>
