--- a/projets.html
+++ b/projets.html
@@ -25,9 +25,73 @@
             <img src="images projet/prjots bon.jpg"/>
         </div>
     <p>Sur cette page, vous pourrez explorer les divers projets menés par Evrard Fulgérale. Qu'il s'agisse de reportages sur des événements sportifs, de collaborations avec des médias ou de créations de sites web, chaque projet reflète son engagement pour un journalisme de qualité et une information vérifiée. Découvrez ses réalisations passées et ses ambitions futures, notamment dans le domaine de la vérification d'informations et d'autres initiatives médiatiques innovantes.</p>
-        <div class="projet" id="projet1">Coupe du Monde de la FIFA - Doha</div>
-        <div class="projet" id="projet2">CAN - Abidjan</div>
-        <div class="projet" id="projet3">Coupe du Monde des Clubs - Rabat</div>
+
+    <h2>Réalisations passées</h2>
+    <ul id="realizations-list">
+        <li><strong>Couverture d'événements sportifs internationaux :</strong>
+            <ul>
+                <li>Coupe du Monde de la FIFA à Doha, CAN à Abidjan, Coupe du Monde des Clubs à Rabat.</li>
+            </ul>
+        </li>
+        <li><strong>Directeur de Rédaction à MEGA SPORTS MÉDIA :</strong>
+            <ul>
+                <li>Coordination d'une équipe de journalistes et production de contenus diversifiés.</li>
+            </ul>
+        </li>
+        <li><strong>Webmaster professionnel :</strong>
+            <ul>
+                <li>Création de sites web avec WordPress/Elementor, optimisation SEO, responsive design.</li>
+            </ul>
+        </li>
+        <li><strong>Formations continues :</strong>
+            <ul>
+                <li>Formations avec l'AFP en veille médiatique et vérification de contenus, et avec l'ABPLS sur les lois du jeu en football.</li>
+            </ul>
+        </li>
+        <li><strong>Initiatives de vérification d'informations :</strong>
+            <ul>
+                <li>Lancement du projet "VéridiQ" pour lutter contre la désinformation, avec le slogan "Preuve et Vérité".</li>
+            </ul>
+        </li>
+        <li><strong>Projets numériques innovants :</strong>
+            <ul>
+                <li>Conception de MEGA SPORTS MÉDIA, Infowatch, et d'autres projets médiatiques en ligne.</li>
+            </ul>
+        </li>
+    </ul>
+
+    <h2>Ambitions futures</h2>
+    <ul id="ambitions-list">
+        <li><strong>Expansion de VéridiQ :</strong>
+            <ul>
+                <li>Faire de VéridiQ une référence dans la vérification des faits en Afrique et intégrer des technologies innovantes comme l'IA.</li>
+            </ul>
+        </li>
+        <li><strong>Innovations en journalisme sportif :</strong>
+            <ul>
+                <li>Introduction de formats immersifs comme la réalité augmentée et virtuelle pour les reportages sportifs.</li>
+                <li>Développement d'une plateforme de données sportives en temps réel avec analyses instantanées.</li>
+            </ul>
+        </li>
+        <li><strong>Mentorat et formation des jeunes journalistes :</strong>
+            <ul>
+                <li>Création d'un programme de mentorat pour former les jeunes journalistes aux nouvelles technologies médiatiques.</li>
+                <li>Organisation d'ateliers sur le journalisme de données et la vérification des faits.</li>
+            </ul>
+        </li>
+        <li><strong>Diversification des projets médiatiques :</strong>
+            <ul>
+                <li>Extension de MEGA SPORTS MÉDIA en une plateforme multisports avec contenu spécialisé pour chaque discipline.</li>
+                <li>Lancement d'une chaîne de retransmission sportive en ligne avec débats interactifs et analyses post-match.</li>
+            </ul>
+        </li>
+        <li><strong>Impact social et responsabilité médiatique :</strong>
+            <ul>
+                <li>Promotion d'un journalisme responsable et éthique, en luttant contre la désinformation dans le domaine du sport.</li>
+                <li>Développement de partenariats avec des ONG pour sensibiliser sur les dangers de la désinformation.</li>
+            </ul>
+        </li>
+    </ul>
     </section>
 
     <!-- Lien vers le fichier JavaScript -->
