--- a/projets.html
+++ b/projets.html
@@ -23,75 +23,9 @@
         <h1>Projets en vedette</h1>
         <div class="image-container">
             <img src="images projet/prjots bon.jpg"/>
-        </div>
-    <p>Sur cette page, vous pourrez explorer les divers projets menés par Evrard Fulgérale. Qu'il s'agisse de reportages sur des événements sportifs, de collaborations avec des médias ou de créations de sites web, chaque projet reflète son engagement pour un journalisme de qualité et une information vérifiée. Découvrez ses réalisations passées et ses ambitions futures, notamment dans le domaine de la vérification d'informations et d'autres initiatives médiatiques innovantes.</p>
-
-    <h2>Réalisations passées</h2>
-    <ul id="realizations-list">
-        <li><strong>Couverture d'événements sportifs internationaux :</strong>
-            <ul>
-                <li>Coupe du Monde de la FIFA à Doha, CAN à Abidjan, Coupe du Monde des Clubs à Rabat.</li>
-            </ul>
-        </li>
-        <li><strong>Directeur de Rédaction à MEGA SPORTS MÉDIA :</strong>
-            <ul>
-                <li>Coordination d'une équipe de journalistes et production de contenus diversifiés.</li>
-            </ul>
-        </li>
-        <li><strong>Webmaster professionnel :</strong>
-            <ul>
-                <li>Création de sites web avec WordPress/Elementor, optimisation SEO, responsive design.</li>
-            </ul>
-        </li>
-        <li><strong>Formations continues :</strong>
-            <ul>
-                <li>Formations avec l'AFP en veille médiatique et vérification de contenus, et avec l'ABPLS sur les lois du jeu en football.</li>
-            </ul>
-        </li>
-        <li><strong>Initiatives de vérification d'informations :</strong>
-            <ul>
-                <li>Lancement du projet "VéridiQ" pour lutter contre la désinformation, avec le slogan "Preuve et Vérité".</li>
-            </ul>
-        </li>
-        <li><strong>Projets numériques innovants :</strong>
-            <ul>
-                <li>Conception de MEGA SPORTS MÉDIA, Infowatch, et d'autres projets médiatiques en ligne.</li>
-            </ul>
-        </li>
-    </ul>
-
-    <h2>Ambitions futures</h2>
-    <ul id="ambitions-list">
-        <li><strong>Expansion de VéridiQ :</strong>
-            <ul>
-                <li>Faire de VéridiQ une référence dans la vérification des faits en Afrique et intégrer des technologies innovantes comme l'IA.</li>
-            </ul>
-        </li>
-        <li><strong>Innovations en journalisme sportif :</strong>
-            <ul>
-                <li>Introduction de formats immersifs comme la réalité augmentée et virtuelle pour les reportages sportifs.</li>
-                <li>Développement d'une plateforme de données sportives en temps réel avec analyses instantanées.</li>
-            </ul>
-        </li>
-        <li><strong>Mentorat et formation des jeunes journalistes :</strong>
-            <ul>
-                <li>Création d'un programme de mentorat pour former les jeunes journalistes aux nouvelles technologies médiatiques.</li>
-                <li>Organisation d'ateliers sur le journalisme de données et la vérification des faits.</li>
-            </ul>
-        </li>
-        <li><strong>Diversification des projets médiatiques :</strong>
-            <ul>
-                <li>Extension de MEGA SPORTS MÉDIA en une plateforme multisports avec contenu spécialisé pour chaque discipline.</li>
-                <li>Lancement d'une chaîne de retransmission sportive en ligne avec débats interactifs et analyses post-match.</li>
-            </ul>
-        </li>
-        <li><strong>Impact social et responsabilité médiatique :</strong>
-            <ul>
-                <li>Promotion d'un journalisme responsable et éthique, en luttant contre la désinformation dans le domaine du sport.</li>
-                <li>Développement de partenariats avec des ONG pour sensibiliser sur les dangers de la désinformation.</li>
-            </ul>
-        </li>
-    </ul>
+<p> Evrard Fulgérale a participé à la couverture de plusieurs événements sportifs internationaux, notamment la Coupe du Monde de la FIFA à Doha, la CAN à Abidjan, et la Coupe du Monde des Clubs à Rabat, en produisant des articles en temps réel, des interviews, et des analyses factuelles pour divers médias. En tant que Directeur de Rédaction chez MEGA SPORTS MÉDIA, il a coordonné une équipe de journalistes, piloté la stratégie éditoriale et assuré la production de contenus variés, tout en garantissant la rigueur et la précision des informations publiées. En parallèle, il a développé une expertise en tant que webmaster professionnel, créant des sites web optimisés pour le référencement (SEO) et l'expérience utilisateur (UX), notamment en responsive design pour les mobiles. Evrard a également suivi des formations avec l'AFP en veille médiatique et vérification de contenus, et a approfondi sa maîtrise des lois du jeu en football avec l'ABPLS. Il a lancé le projet "VéridiQ", un média dédié à la vérification des faits, pour lutter contre la désinformation, particulièrement dans le domaine sportif.<p>
+<p> Ses ambitions futures incluent l'expansion de "VéridiQ" pour en faire une référence en Afrique, intégrant des technologies innovantes comme l'intelligence artificielle, et collaborant avec des partenaires internationaux. Il souhaite également introduire des formats immersifs comme la réalité augmentée et virtuelle dans le journalisme sportif, tout en développant une plateforme de données sportives en temps réel. Evrard envisage également de créer un programme de mentorat pour les jeunes journalistes sportifs en Afrique, et d'organiser des ateliers sur le journalisme de données et la vérification des faits. Il prévoit de diversifier les projets médiatiques avec une plateforme multisports pour MEGA SPORTS MÉDIA et une chaîne de retransmission sportive en ligne, tout en promouvant un journalisme responsable et éthique, notamment à travers des partenariats avec des ONG pour sensibiliser sur la désinformation.<p>
+           
     </section>
 
     <!-- Lien vers le fichier JavaScript -->
