--- a/accueil.html
+++ b/accueil.html
@@ -10,7 +10,7 @@
     <!-- Navigation vers les autres pages -->
     <nav>
         <ul>
-            <li><a href="accueil.html">Compétences</a></li>
+            <li><a href="accueil.html">Accueil</a></li>
             <li><a href="competences.html">Compétences</a></li>
             <li><a href="projets.html">Projets</a></li>
             <li><a href="a propos.html">À propos</a></li>
